@@ -475,3 +475,14 @@ int op_check_events(int ctr, u8 nr, u16 um, op_cpu cpu_type)
 
 	return ret;
 }
+
+unsigned int op_min_count(u8 ctr_type, op_cpu cpu_type)
+{
+	struct op_event * event;
+
+	load_events(cpu_type);
+
+	event = find_event(ctr_type);
+	
+	return event ? event->min_count : 0;
+}
